Внесены корректировки согласно комментариям